[package]
name = "monitoring-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-prom = "0.7.0"
prometheus = { version = "0.13.3", features = ["process"] }
systemstat = "0.2.3"
tracing = "0.1.40"
